--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "e2e:open": "vue-cli-service e2e:open"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "firebase": "^4.13.1",
     "global": "^4.3.2",
     "register-service-worker": "^1.0.0",
+    "strava-v3": "^1.14.0",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
